Updated to latest lucene. A few tweaks to the java options